<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >
    <data>
        <variable
        name="message"
        type="com.example.sendmessagebinding.data.Message"/>
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.SendMessageActivity">

        <EditText
            android:id="@+id/etMessage"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/etMessageMarginTop"
            android:autofillHints=""
            android:hint="@string/etMessageHint"
            android:text="@={message.content}"
            android:minHeight="@dimen/etMessageMinHeight"
            android:textColorHint="@color/etMessageColorHint" />
        <EditText
            android:id="@+id/etUser"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/etUserMarginTop"
            android:autofillHints=""
            android:hint="@string/etUserHint"
            android:text="@{message.user.name}"
            android:minHeight="@dimen/etUserMinHeight"
            android:textColorHint="@color/etUserColorHint" />

        <Button
            android:id="@+id/btSend"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/btSendMarginTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btSendText"/>

    </LinearLayout>
</layout>
